# mscsim

./: .gitignore  CHANGELOG  LICENSE  LICENSE-CC0.rtf  LICENSE-MIT.rtf  LICENSE-MIT.txt  LICENSE.rtf  README.md  RELEASE  create_dpkg.sh  deb_clean.sh  deb_create.sh  deb_mscsim-data-terrain_all.control  deb_mscsim-data_all.control  deb_mscsim_amd64.control  export_cc0.sh  mscsim.desktop  run_cppcheck.sh  run_cpplint.sh  run_mscsim.bat  run_mscsim.sh  run_qti.bat  run_qti.sh  run_valgrind.sh  run_wix.bat  run_wix_bundle.bat  run_wix_clean.bat  sync_github.sh  sync_github_cc0.sh  wix_alut.wxs  wix_bundle.wxs  wix_main.wxs  wix_osg.wxs  wix_qt.wxs
src/: Autopilot.cpp  Autopilot.h  CMakeLists.txt  Common.h  Data.h  DataNet.h  Defines.h  Manager.cpp  Manager.h  ManagerFDM.cpp  ManagerFDM.h  Navigation.cpp  Navigation.h  Networking.cpp  Networking.h  Path.h  Simulation.cpp  Simulation.h  defs.h  fdm_Manager.cpp  fdm_Manager.h  main.cpp  mscsim.pro  mscsim.qrc  mscsim.rc  sim.pro  sim.qrc  sim.rc  test_efis.pro  test_rotor.pro
src/cgi/: CMakeLists.txt  cgi.pri  cgi_Airport.cpp  cgi_Camera.cpp  cgi_Camera.h  cgi_Color.cpp  cgi_Color.h  cgi_Colors.cpp  cgi_Colors.h  cgi_Defines.h  cgi_Ephemeris.cpp  cgi_Ephemeris.h  cgi_FindNode.cpp  cgi_FindNode.h  cgi_FogScene.cpp  cgi_FogScene.h  cgi_Fonts.cpp  cgi_Fonts.h  cgi_GeoTIFF.cpp  cgi_GeoTIFF.h  cgi_Geometry.cpp  cgi_Geometry.h  cgi_HUD.cpp  cgi_HUD.h  cgi_Intersections.cpp  cgi_Intersections.h  cgi_Manager.cpp  cgi_Manager.h  cgi_ManipulatorMap.cpp  cgi_ManipulatorMap.h  cgi_ManipulatorOrbit.cpp  cgi_ManipulatorOrbit.h  cgi_ManipulatorPilot.cpp  cgi_ManipulatorPilot.h  cgi_ManipulatorShift.cpp  cgi_ManipulatorShift.h  cgi_ManipulatorWorld.cpp  cgi_ManipulatorWorld.h  cgi_Mercator.cpp  cgi_Mercator.h  (+18 more)
src/fdm/: CMakeLists.txt  Doxyfile  fdm.pri  fdm_Aerodynamics.cpp  fdm_Aerodynamics.h  fdm_Aircraft.cpp  fdm_Aircraft.h  fdm_Base.cpp  fdm_Base.h  fdm_Common.h  fdm_Controls.cpp  fdm_DataInp.h  fdm_DataOut.h  fdm_Defines.h  fdm_Environment.cpp  fdm_Exception.h  fdm_FDM.cpp  fdm_FDM.h  fdm_Input.h  fdm_Intersections.cpp  fdm_LandingGear.cpp  fdm_Log.cpp  fdm_Log.h  fdm_Manager.cpp  fdm_Manager.h  fdm_Mass.cpp  fdm_Mass.h  fdm_Path.h  fdm_Propulsion.cpp  fdm_Propulsion.h  fdm_Recorder.cpp  fdm_Recorder.h  fdm_Test.cpp  fdm_Test.h  fdm_Types.h
src/fdm_aw101/: CMakeLists.txt  aw101_AFCS.cpp  aw101_AFCS.h  aw101_Aerodynamics.cpp  aw101_Aerodynamics.h  aw101_Aircraft.cpp  aw101_Aircraft.h  aw101_Controls.cpp  aw101_Controls.h  aw101_FDM.cpp  aw101_FDM.h  aw101_Fuselage.cpp  aw101_Fuselage.h  aw101_LandingGear.cpp  aw101_LandingGear.h  aw101_MainRotor.cpp  aw101_MainRotor.h  aw101_Mass.cpp  aw101_Mass.h  aw101_Propulsion.cpp  aw101_Propulsion.h  aw101_StabilizerHor.cpp  aw101_StabilizerHor.h  aw101_StabilizerVer.cpp  aw101_StabilizerVer.h  aw101_TailRotor.cpp  aw101_TailRotor.h  fdm_aw101.pri
src/fdm_c130/: CMakeLists.txt  c130_Aerodynamics.cpp  c130_Aerodynamics.h  c130_Aircraft.cpp  c130_Aircraft.h  c130_Controls.cpp  c130_Controls.h  c130_Engine.cpp  c130_Engine.h  c130_FDM.cpp  c130_FDM.h  c130_Governor.cpp  c130_Governor.h  c130_LandingGear.cpp  c130_LandingGear.h  c130_Mass.cpp  c130_Mass.h  c130_Propeller.cpp  c130_Propeller.h  c130_Propulsion.cpp  c130_Propulsion.h  c130_StabilizerHor.cpp  c130_StabilizerHor.h  c130_StabilizerVer.cpp  c130_StabilizerVer.h  c130_TailOff.cpp  c130_TailOff.h  fdm_c130.pri
src/fdm_c172/: CMakeLists.txt  c172_Aerodynamics.cpp  c172_Aerodynamics.h  c172_Aircraft.cpp  c172_Aircraft.h  c172_Autopilot.cpp  c172_Autopilot.h  c172_Controls.cpp  c172_Controls.h  c172_Engine.cpp  c172_Engine.h  c172_FDM.cpp  c172_FDM.h  c172_FlightDirector.cpp  c172_FlightDirector.h  c172_GFC700_AP.cpp  c172_GFC700_AP.h  c172_GFC700_FD.cpp  c172_GFC700_FD.h  c172_KAP140_AP.cpp  c172_KAP140_AP.h  c172_KAP140_FD.cpp  c172_KAP140_FD.h  c172_KFC325_AP.cpp  c172_KFC325_AP.h  c172_KFC325_FD.cpp  c172_KFC325_FD.h  c172_LandingGear.cpp  c172_LandingGear.h  c172_Mass.cpp  c172_Mass.h  c172_Propeller.cpp  c172_Propeller.h  c172_Propulsion.cpp  c172_Propulsion.h  c172_StabilizerHor.cpp  c172_StabilizerHor.h  c172_StabilizerVer.cpp  c172_StabilizerVer.h  c172_TailOff.cpp  (+4 more)
src/fdm_f16/: CMakeLists.txt  f16_Aerodynamics.cpp  f16_Aerodynamics.h  f16_Aircraft.cpp  f16_Aircraft.h  f16_Controls.cpp  f16_Controls.h  f16_Engine.cpp  f16_Engine.h  f16_FDM.cpp  f16_FDM.h  f16_FLCS.cpp  f16_FLCS.h  f16_FLCS_Recorder.cpp  f16_FLCS_Recorder.h  f16_FLCS_bak_AFIT.cpp  f16_FLCS_bak_NASA.h  f16_LandingGear.cpp  f16_LandingGear.h  f16_Mass.cpp  f16_Mass.h  f16_Propulsion.cpp  f16_Propulsion.h  fdm_f16.pri
src/fdm_f16c/: f16c_Aerodynamics.cpp  f16c_Aerodynamics.h  f16c_Aircraft.cpp  f16c_Aircraft.h  f16c_Controls.cpp  f16c_Controls.h  f16c_FLCS.cpp  f16c_FLCS.h  f16c_FLCS_bak_AFIT.h  f16c_FLCS_bak_NASA.cpp  f16c_LandingGear.cpp  f16c_LandingGear.h  f16c_Mass.cpp  f16c_Mass.h  f16c_Propulsion.cpp  f16c_Propulsion.h  fdm_f16c.pri
src/fdm_f35a/: CMakeLists.txt  f35a_Aerodynamics.cpp  f35a_Aerodynamics.h  f35a_Aircraft.cpp  f35a_Aircraft.h  f35a_Controls.cpp  f35a_Controls.h  f35a_Engine.cpp  f35a_Engine.h  f35a_FDM.cpp  f35a_FDM.h  f35a_FLCS.cpp  f35a_FLCS.h  f35a_LandingGear.cpp  f35a_LandingGear.h  f35a_Mass.cpp  f35a_Mass.h  f35a_Propulsion.cpp  f35a_Propulsion.h  f35a_StabilizerHor.cpp  f35a_StabilizerHor.h  f35a_StabilizerVer.cpp  f35a_StabilizerVer.h  f35a_TailOff.cpp  f35a_TailOff.h  fdm_f35a.pri
src/fdm_p51/: CMakeLists.txt  fdm_p51.pri  p51_Aerodynamics.cpp  p51_Aerodynamics.h  p51_Aircraft.cpp  p51_Aircraft.h  p51_Compressor.cpp  p51_Compressor.h  p51_Controls.cpp  p51_Controls.h  p51_Engine.cpp  p51_Engine.h  p51_FDM.cpp  p51_FDM.h  p51_Governor.cpp  p51_Governor.h  p51_LandingGear.cpp  p51_LandingGear.h  p51_Mass.cpp  p51_Mass.h  p51_Propeller.cpp  p51_Propeller.h  p51_Propulsion.cpp  p51_Propulsion.h  p51_StabilizerHor.cpp  p51_StabilizerHor.h  p51_StabilizerVer.cpp  p51_StabilizerVer.h  p51_TailOff.cpp  p51_TailOff.h
src/fdm_pw5/: CMakeLists.txt  fdm_pw5.pri  pw5_Aerodynamics.cpp  pw5_Aerodynamics.h  pw5_Aircraft.cpp  pw5_Aircraft.h  pw5_FDM.cpp  (+15 more)
(+1480 files in other folders)
