add_library( fdm_c130 STATIC
    c130_Aerodynamics.cpp
    c130_Aircraft.cpp
    c130_Controls.cpp
    c130_Engine.cpp
    c130_Governor.cpp
    c130_LandingGear.cpp
    c130_Mass.cpp
    c130_Propeller.cpp
    c130_Propulsion.cpp
    c130_StabilizerHor.cpp
    c130_StabilizerVer.cpp
    c130_TailOff.cpp
)
