add_library( fdm_c172 STATIC
    c172_Aerodynamics.cpp
    c172_Aircraft.cpp
    c172_Autopilot.cpp
    c172_Controls.cpp
    c172_Engine.cpp
    c172_FlightDirector.cpp
    c172_LandingGear.cpp
    c172_Mass.cpp
    c172_Propeller.cpp
    c172_Propulsion.cpp
    c172_StabilizerHor.cpp
    c172_StabilizerVer.cpp
    c172_TailOff.cpp
)
