add_library( fdm_test STATIC
    test_Aerodynamics.cpp
    test_AFCS.cpp
    test_Aircraft.cpp
    test_Controls.cpp
    test_Fuselage.cpp
    test_LandingGear.cpp
    test_MainRotor.cpp
    test_Mass.cpp
    test_Propulsion.cpp
    test_StabilizerHor.cpp
    test_StabilizerVer.cpp
    test_TailRotor.cpp
)
